add notifications on new product
