# server/src/openapi.yaml
@@ -192,6 +192,30 @@ paths:
           $ref: '#/components/responses/NotFound'
         '500':
           $ref: '#/components/responses/InternalError'
+  /api/notification/subscribe:
+    post:
+      summary: Subscribe to push notifications
+      operationId: notificationSubscribe
+      tags:
+        - product
+      requestBody:
+        description: Subscription
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+      responses:
+        '200':
+          $ref: '#/components/responses/Success'
+        '400':
+          $ref: '#/components/responses/BadRequest'
+        '401':
+          $ref: '#/components/responses/Unauthorized'
+        '404':
+          $ref: '#/components/responses/NotFound'
+        '500':
+          $ref: '#/components/responses/InternalError'
 
 components:
   responses:
